# platform-capability-intelligence

./: .gitignore  README.md  pyproject.toml
dashboard/: app.py
demo/catalog/: catalog.yaml
demo/manifest/: platform_manifest.yaml  scan_manifest.yaml
demo/repos/legacy-analytics-service/: requirements.txt
demo/repos/legacy-analytics-service/src/analytics/: data_pull.py
demo/repos/notification-service/: requirements.txt
demo/repos/notification-service/src/notification_service/: sender.py
demo/repos/payment-service/: requirements.txt
demo/repos/payment-service/src/payment_service/: app.py
demo/repos/payment-service/src/payment_service/clients/: payment_gateway.py
demo/repos/platform-http-client/: pyproject.toml
demo/repos/platform-http-client/src/platform_http_client/: __init__.py  client.py
demo/repos/reconciliation-service/: requirements.txt
demo/repos/reconciliation-service/src/reconciliation_service/: fetcher.py
demo/repos/reporting-service/: requirements.txt
demo/repos/reporting-service/src/reporting_service/api/: reports.py
demo/repos/reporting-service/src/reporting_service/http/: custom_session.py
docs/: capability_catalog.md  demo_narrative.md  detection_pipeline.md  evaluation.md  gap.md  implementation_plan.md  market_research_report.md  platform_capability_intelligence_architecture.md  problem_statement.md
src/platform_capability/: cli.py  config.py  models.py
src/platform_capability/catalog/: extractor.py  loader.py
src/platform_capability/classification/: aggregator.py  classifier.py
src/platform_capability/detectors/: base.py  code_pattern.py  dependency.py  import_detector.py  namespace.py
src/platform_capability/llm/: mock_client.py  pipeline.py  schemas.py
src/platform_capability/pipeline/: scan_pipeline.py
src/platform_capability/workspace/: manager.py  manifest.py
tests/: conftest.py  test_aggregator.py  test_catalog_extractor.py  test_catalog_loader.py  test_classifier.py  test_detectors.py  test_llm.py  test_manifest.py  test_models.py  test_workspace_manager.py
